exports[`Head Tags - WP SEO 0.13 > Post > should render the correct link tags #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/hello-world/"
/>
`;

exports[`Head Tags - WP SEO 0.13 > Page > should render the correct link tags #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/sample-page/"
/>
`;

exports[`Head Tags - WP SEO 0.13 > CPT > should render the correct link tags #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/movie/the-terminator/"
/>
`;

exports[`Head Tags - WP SEO 0.13 > Post > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > Page > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > Tag > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > Homepage > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > CPT > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > CPT (archive) > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > Custom Taxonomy > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > Post > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/hello-world/"
/>
`;

exports[`Head Tags - WP SEO 0.13 > Page > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/sample-page/"
/>
`;

exports[`Head Tags - WP SEO 0.13 > Category > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;

exports[`Head Tags - WP SEO 0.13 > CPT > should render the correct canonical link #0`] = `
<link
  data-rh="true"
  rel="canonical"
  href="http://my.frontity.site/movie/the-terminator/"
/>
`;

exports[`Head Tags - WP SEO 0.13 > Author > should render a custom tag #0`] = `
<meta
  data-rh="true"
  name="custom-tag"
  content="A custom meta tag for testing purposes."
/>
`;
